# fifo_credit_problem

./: README.md  hints.txt  prompt.txt  pyproject.toml
docs/: Specification.md
sources/: fifo_credit.sv
tests/: test_fifo_credit_hidden.py
